# gazebo_satellite_terrain

./: .env.example  .gitignore  README.md  package.xml
config/: config.yaml
gazebo_satellite_terrain/: coord.py  objects.py  spawn_object.py  spawn_tile.py  terrain_manager.py  utils.py
launch/: launch_sim.launch.py
models/satellite_tile/: model.sdf
worlds/: empty.world
