<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_satellite_terrain</name>
  <version>1.0.0</version>
  <description>ROS2 package for creating satellite terrain in Gazebo</description>
  <maintainer email="jekahamster@gmail.com">jekahamster</maintainer>
  <license>GNU GPLv3</license>

  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
